1. homepage styling changed 2. reformatted orgform popup to react bootstrap 3. fixed api get newOrgHash on submit 4. fixed z-index bugs

--- a/src/components/SIGNIN.css
+++ b/src/components/SIGNIN.css
@@ -55,4 +55,8 @@ a {
     font-size: 1.2em;
     padding: 5px;
   }
+
+  #createOrgModal .modal-dialog {
+    max-width: 70vw;
+  }
   
